# devdox-ai-sonar

./: .env.example  .flake8  .gitignore  Makefile  Readme.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  publish.yml
src/devdox_ai_sonar/: __init__.py  cli.py  config.py  fix_validator.py  llm_fixer.py  logging_config.py  models.py  sonar_analyzer.py
src/devdox_ai_sonar/models/: file_structures.py  sonar.py
src/devdox_ai_sonar/prompts/: fix_issues.j2
src/devdox_ai_sonar/utils/: file_indentation.py
tests/: conftest.py  run_tests.py  test_cli.py  test_commands.sh  test_config.py  test_fix_application.py  test_fix_validator.py  test_integration.py  test_llm_fixer.py  test_logging_config.py  test_models.py  test_sonar_analyzer.py
tests/utils/: test_file_indentation.py
